<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010C10"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalConstraint10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalConstraint30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalConstraint20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalConstraint80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/ansTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000507"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:textColor="#FFEB3B"
        android:textColorHighlight="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontalConstraint10"></TextView>

    <EditText
        android:id="@+id/et1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/number_1"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="#80000000"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/verticalConstraint20"
        app:layout_constraintRight_toRightOf="@id/verticalConstraint80"
        app:layout_constraintTop_toBottomOf="@id/ansTv" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/number_2"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="#80000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/verticalConstraint80"
        app:layout_constraintStart_toStartOf="@id/verticalConstraint20"
        app:layout_constraintTop_toBottomOf="@id/et1" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/verticalConstraint80"
        app:layout_constraintStart_toStartOf="@id/verticalConstraint20"
        app:layout_constraintTop_toBottomOf="@id/et2">

        <RadioButton
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/add"
            android:textColor="#11E81A"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/subtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/subtract"
            android:textColor="#11E81A"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/multiply"
            android:textColor="#11E81A"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/divide"
            android:textColor="#11E81A"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#80000000"
        android:text="@string/clear"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/verticalConstraint80"
        app:layout_constraintStart_toStartOf="@id/verticalConstraint20"
        app:layout_constraintTop_toBottomOf="@id/rg" />
</androidx.constraintlayout.widget.ConstraintLayout>